Verbatim copy of definitions